new classes tests