@@ -1,9 +1,6 @@
 package uk.gov.hmcts.reform.finrem.caseorchestration.mapper.letterdetails.contestordernotapproved;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.type.TypeFactory;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 import uk.gov.hmcts.reform.finrem.caseorchestration.mapper.CourtDetailsMapper;
@@ -13,12 +10,9 @@ import uk.gov.hmcts.reform.finrem.ccd.domain.FinremCaseData;
 import uk.gov.hmcts.reform.finrem.ccd.domain.FinremCaseDetails;
 import uk.gov.hmcts.reform.finrem.ccd.domain.wrapper.CourtListWrapper;
 
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
-import static java.util.stream.Collectors.toList;
+import static uk.gov.hmcts.reform.finrem.ccd.domain.YesOrNo.getYesOrNo;
 
 @Component
 public class ContestedDraftOrderNotApprovedDetailsMapper extends AbstractLetterDetailsMapper {
@@ -35,6 +29,9 @@ public class ContestedDraftOrderNotApprovedDetailsMapper extends AbstractLetterD
             .court(courtDetailsMapper.getCourtDetails(courtList).getCourtName())
             .judgeDetails(getJudgeDetails(caseDetails))
             .contestOrderNotApprovedRefusalReasons(getFormattedRefusalReasons(caseDetails))
+            .civilPartnership(getYesOrNo(caseDetails.getCaseData().getCivilPartnership()))
+            .divorceCaseNumber(caseDetails.getCaseData().getDivorceCaseNumber())
+            .refusalOrderDate(String.valueOf(caseDetails.getCaseData().getRefusalOrderDate()))
             .build();
     }
 
@@ -47,8 +44,7 @@ public class ContestedDraftOrderNotApprovedDetailsMapper extends AbstractLetterD
     private String getFormattedRefusalReasons(FinremCaseDetails caseDetails) {
         FinremCaseData caseData = caseDetails.getCaseData();
         List<String> refusalReasons = caseData.getJudgeNotApprovedReasons().stream()
-            .map(reason -> reason.getValue().getJudgeNotApprovedReasons())
-            .collect(toList());
+            .map(reason -> reason.getValue().getJudgeNotApprovedReasons()).toList();
 
         StringBuilder formattedRefusalReasons = new StringBuilder();
         refusalReasons.forEach(reason -> {
